# Sentinel

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: space_README.md
samples/: eval_set.json  run_demo.ps1
samples/demo_honeybees/: behavior.txt  colony.txt  honey.txt
samples/docs/: aurora_history.md  aurora_operations.txt  aurora_overview.txt
sentinel/: __init__.py  api.py  chunker.py  claims.py  cli.py  embedder.py  evalharness.py  llm.py  nli.py  report.py  retrieval.py  scoring.py  verifier.py
tests/: test_api.py  test_eval.py  test_report.py  test_sentinel.py
web/: README.md  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/history/: page.tsx
web/app/runs/[id]/: page.tsx
web/components/: ClaimCard.tsx  ErrorBanner.tsx  Nav.tsx  ResultsView.tsx  Spinner.tsx  TrustGauge.tsx
web/lib/: api.ts  format.ts  types.ts
