[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-factcheck"
version = "1.1.0"
description = "Fact-checking engine that verifies AI answers against source documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools]
packages = ["sentinel"]
